# vis-grep

./: .gitignore  CLAUDE.md  CONFIG.md  Cargo.toml  FEATURE_IDEAS.md  FILE_LOCKING_SAFETY.md  README.md  TEST_TOOLS.md  generate_test_logs.py  generate_test_logs.sh  run.sh  test_layout.yaml  test_panel_layout.sh  test_simple_tail.sh  test_splitter.sh  test_tail_mode.sh  test_tail_tree.ps1  test_tail_tree.py  test_tail_tree.sh  test_tree_layout.yaml
docs/: ARCHITECTURE.md  CODE_QUALITY_REVIEW.md  DESIGN.md  EDITOR_CONFIG.md  FILTER_USAGE.md  LOG_LEVEL_FILTERING.md  ROADMAP.md  SAVED_PATTERNS_DESIGN.md  SPLITTER_BUG.md  TAIL_MODE_DESIGN.md  TAIL_MODE_UI_DESIGN.md  TAIL_PREVIEW_FILTER_DESIGN.md  TAIL_PREVIEW_PANE.md  TAIL_TREE_LAYOUT_DESIGN.md  WINDOWS_TESTING.md  YAML_LAYOUT_PAUSED_EXAMPLE.yaml
examples/: custom_splitter_test.rs  minimal_splitter.rs  tail-layout-example.yaml
src/: config.rs  grep_mode.rs  highlighter.rs  input_handler.rs  main.rs  preview.rs  search.rs  splitter.rs  tail_layout.rs  tail_mode.rs  theme.rs
src/filter/: level.rs  mod.rs  preview.rs  state.rs  test.rs  tree.rs
src/log_parser/: colors.rs  detector.rs  mod.rs
src/widgets/: mod.rs  text_viewer.rs
