[package]
name = "vis-grep"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["syntect"] }
walkdir = "2"
regex = "1"
memmap2 = "0.9"
rayon = "1.8"
env_logger = "0.11"
log = "0.4"
arboard = "3.4"  # Clipboard support
rfd = "0.15"     # Native file/folder dialogs
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }  # Command-line argument parsing
once_cell = "1.21.3"
